# Portfolio-Back-Python

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/api/: deps.py  index_router.py  router.py
app/api/controllers/: portfolio.py  portfolio_controller.py
app/api/routes/: auth.py  portfolio.py  portfolio_router.py
app/api/services/: portfolio.py  portfolio_service.py
app/core/: auth.py  config.py
app/db/: session.py
app/models/: __init__.py  about.py  achievement.py  association_tables.py  contact.py  contact_location_info.py  contact_opportunities.py  language.py  project.py  project_skills.py  skill.py  user.py
